@@ -34,6 +34,7 @@ Date: ????
     - Make the deciders for each of the conditions
     - Switch the condition combiners from decider to arithmetic
     - Reuse struct.arithmetics where possible
+    - Refractor to support entity settings pasted
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.1
 Date: 2024. 11. 04
